--- a/source/blog/2025/06/25.md
+++ b/source/blog/2025/06/25.md
@@ -1,6 +1,11 @@
 ---
 title: Nunc pharetra turpis id arcu porta aliquet at eget nunc
 date: 2025-06-25
+image:
+  alt: Reading Terminal Market at the intersection of 12th and Arch in Philadelphia
+  source: ./dan-mall-qf0wyIraUOI-unsplash.jpg
+  credit: Dan Mall
+  link: https://unsplash.com/photos/unks-coffee-shop-signage-qf0wyIraUOI
 ---
 
 Aliquam blandit non massa id viverra. Ut non leo vel tortor rhoncus interdum. Sed consequat dictum semper. Quisque convallis, leo sit amet vestibulum bibendum, purus sapien viverra orci, ut hendrerit mauris sapien sed turpis. Morbi elementum lectus vel ante lobortis, vitae tristique nunc blandit. Donec facilisis commodo massa vitae molestie. Phasellus malesuada posuere metus, in interdum odio mollis a.
