use remote link instead of saving source img to blog

--- a/source/blog/2025/06/25.md
+++ b/source/blog/2025/06/25.md
@@ -3,7 +3,7 @@ title: Nunc pharetra turpis id arcu porta aliquet at eget nunc
 date: 2025-06-25
 image:
   alt: Reading Terminal Market at the intersection of 12th and Arch in Philadelphia
-  source: ./dan-mall-qf0wyIraUOI-unsplash.jpg
+  source: https://images.unsplash.com/photo-1615040757977-09b7e573f977
   credit: Dan Mall
   link: https://unsplash.com/photos/unks-coffee-shop-signage-qf0wyIraUOI
 ---
