--- a/source/blog/2025/06/25.md
+++ b/source/blog/2025/06/25.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1615040757977-09b7e573f977
   credit: Dan Mall
   link: https://unsplash.com/photos/unks-coffee-shop-signage-qf0wyIraUOI
+category: Donec at
 tags:
   - history
   - philadelphia
