add sample image content to blog pages

--- a/source/blog/2025/01/01.md
+++ b/source/blog/2025/01/01.md
@@ -1,6 +1,21 @@
 ---
 title: In vel metus vitae nisi ornare pretium ac ut tortor
 date: 2025-01-01
+image:
+  alt: A string band performing at a stop along South Broad Street in the New Year’s Mummers Parade in Philadelphia. City Hall towers in the background.
+  source: https://images.unsplash.com/photo-1705849442087-71b24cd4ca5b
+  credit: Carol Highsmith’s America
+  link: https://unsplash.com/photos/the-mummers-parade-pHrwFdLhYGI
+tags:
+  - street
+  - parade
+  - people
+  - mummers
+  - string band
+  - music
+  - historic
+  - tradition
+  - new year
 ---
 
 Vivamus tincidunt, metus quis efficitur egestas, ante eros vulputate lectus, in ornare lorem nisl rutrum mauris. Phasellus venenatis risus sed congue convallis. Vestibulum ut placerat augue. Phasellus sem diam, rhoncus non leo quis, vulputate suscipit lorem. Duis urna sem, suscipit ac ultrices quis, condimentum in quam. Nulla mollis, ipsum nec tristique ultricies, lorem quam pretium ipsum, id ultrices metus leo id dolor. Vestibulum posuere condimentum ullamcorper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam laoreet felis turpis, eget porttitor orci mattis a.
