--- a/source/blog/2025/01/08.md
+++ b/source/blog/2025/01/08.md
@@ -1,6 +1,19 @@
 ---
 title: Suspendisse pretium augue id luctus sodales
 date: 2025-01-08
+image:
+  alt: The large neon sign on the roof of the Divine Lorraine Hotel on North Broad Street in Philadelphia
+  source: https://images.unsplash.com/photo-1583038351909-978b5645d238
+  credit: Savann Prak
+  link: https://unsplash.com/photos/red-and-white-unks-building-DriyVDg9FME
+tags:
+  - sign
+  - landmark
+  - building
+  - architecture
+  - hotel
+  - philadelphia
+  - abandoned
 ---
 
 Praesent neque nisl, mollis rhoncus nibh eget, tincidunt dictum dui. Proin facilisis quis velit vel efficitur. Sed nec eros sed lorem euismod venenatis sit amet a purus. Aenean et risus id nulla viverra elementum sed in nunc. Morbi id ante nec dolor pretium fermentum eu eu libero. Integer vel arcu consectetur, pharetra mauris et, volutpat est. Vestibulum eget molestie lorem, ac vulputate ipsum. Etiam at ultricies massa. Quisque iaculis gravida mauris vel varius. Nunc in mi pellentesque, egestas ipsum eget, cursus neque. Cras sit amet consectetur arcu. Suspendisse porta et nisi et ullamcorper. Phasellus non leo sit amet sem molestie ultricies.
