--- a/source/blog/2025/01/15.md
+++ b/source/blog/2025/01/15.md
@@ -1,6 +1,19 @@
 ---
 title: Etiam eget suscipit lorem, convallis commodo dolor
 date: 2025-01-15
+image:
+  alt: Looking down the at the pendulum from the top of the staircase at the Franklin Institute
+  source: https://images.unsplash.com/photo-1525916714929-286f823b1944
+  credit: Tim Mccarthy
+  link: https://unsplash.com/photos/brown-wooden-stairs--kMm970EVqw
+tags:
+  - museum
+  - stairs
+  - philadelphia
+  - staircase
+  - pendulum
+  - franklin institute
+  - science
 ---
 
 Suspendisse potenti. In mattis arcu ut eleifend pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin massa dui, bibendum at condimentum et, ornare porttitor risus. In vulputate velit a ante eleifend, sit amet faucibus augue dignissim. Mauris mattis feugiat facilisis. Phasellus cursus tortor mauris, a euismod lacus sagittis at. Aliquam ut gravida dolor. Curabitur eu molestie enim. Phasellus cursus aliquet varius.
