--- a/source/blog/2025/01/22.md
+++ b/source/blog/2025/01/22.md
@@ -1,6 +1,18 @@
 ---
 title: Morbi at mauris non metus semper suscipit a vel nisi
 date: 2025-01-22
+image:
+  alt: A train along the Market-Frankford line in Philadelphia pulling into the 11th Street station
+  source: https://images.unsplash.com/photo-1693665509711-a4297521e7bb
+  credit: Shawn Reid
+  link: https://unsplash.com/photos/a-subway-train-pulling-into-a-train-station-jbVf_yZvdnQ
+tags:
+  - train
+  - philadelphia
+  - subway
+  - train station
+  - market-frankford line
+  - septa
 ---
 
 Nam eget scelerisque nulla. Nullam justo nulla, maximus et tellus sed, tincidunt aliquam nulla. Cras velit lectus, tempor vel faucibus non, tincidunt non metus. Suspendisse eget augue vel odio suscipit sagittis id non neque. Nunc pretium, nibh quis maximus aliquam, quam enim tristique nunc, id ultrices lectus velit eget elit. Integer ultrices condimentum felis, eu semper tortor pharetra vitae. Duis nec pretium urna. Suspendisse vehicula gravida dolor sed consequat. Vivamus in rutrum libero. Duis suscipit ultrices viverra. Quisque luctus tortor blandit sapien iaculis dapibus. Ut eleifend condimentum magna vitae fermentum. Nullam id erat varius, semper diam ut, scelerisque dolor.
