--- a/source/blog/2025/01/29.md
+++ b/source/blog/2025/01/29.md
@@ -1,6 +1,23 @@
 ---
 title: Integer maximus cursus ante non luctus
 date: 2025-01-29
+image:
+  alt: Looking west up Ranstead Street from 18th St in Philadelphia, with the Midtown Diner on the northwest corner. A road sign reads "No Outlet".
+  source: https://images.unsplash.com/photo-1510510276178-f0d423c3913b
+  credit: Jose Antonio Gallego Vázquez
+  link: https://unsplash.com/photos/no-outlet-road-sign-beside-brown-concrete-buildings-IaXd2eUTwHA
+tags:
+  - city
+  - winter
+  - snow
+  - street
+  - urban
+  - road sign
+  - downtown
+  - sidewalk
+  - diner
+  - restaurant
+  - buildings
 ---
 
 Proin sed consectetur mi, a molestie nisi. Proin ac auctor lorem. Morbi a placerat risus. Integer imperdiet libero arcu, nec fermentum enim volutpat non. Cras volutpat maximus ipsum, a commodo felis luctus eu. Nunc imperdiet mollis mi. Vestibulum urna risus, semper ut semper eu, ultricies lobortis arcu. Nullam consequat magna vitae tellus euismod laoreet. Sed quis fringilla nunc, eu gravida risus. In eget risus eu enim porta aliquam.
