--- a/source/blog/2025/02/05.md
+++ b/source/blog/2025/02/05.md
@@ -1,6 +1,19 @@
 ---
 title: In eu velit vitae libero venenatis tincidunt vel id tortor
 date: 2025-02-05
+image:
+  alt: Sculptures spraying water in the fountain at the middle of Logan Circle along the Benjamin Franklin Parkway in Philadelphia
+  source: https://images.unsplash.com/photo-1643925263398-a2659b1ad981
+  credit: Teitur Hansen
+  link: https://unsplash.com/photos/a-fountain-with-a-statue-of-a-man-riding-a-turtle-JvCFSewPj7Q
+tags:
+  - fountain
+  - water
+  - public art
+  - statue
+  - sculpture
+  - philadelphia
+  - logan circle
 ---
 
 Aliquam gravida lacinia mi, sit amet consectetur nunc consequat in. Nulla facilisi. Vestibulum blandit arcu ipsum. Quisque quis laoreet felis. Nulla non tortor dolor. Nullam in porta risus. Mauris felis eros, rutrum auctor purus sed, egestas dictum ipsum. Donec nisl eros, pulvinar condimentum justo ut, mattis interdum felis. Phasellus sagittis enim eget tellus fringilla cursus. Maecenas eget congue nisl. Nam in lobortis est. Mauris ultricies luctus vulputate.
