--- a/source/blog/2025/02/19.md
+++ b/source/blog/2025/02/19.md
@@ -1,6 +1,19 @@
 ---
 title: Aliquam vulputate efficitur libero quis finibus
 date: 2025-02-19
+image:
+  alt: An archway along the side of Kelly Drive in Philadelphia, with stairs leading through Fairmount Park
+  source: https://images.unsplash.com/photo-1585446934544-1601af9ef0c4
+  credit: Edan Cohen
+  link: https://unsplash.com/photos/brown-wooden-bridge-in-the-woods-H-LTaIBsZBA
+tags:
+  - wall
+  - stairs
+  - outdoors
+  - philadelphia
+  - urban
+  - park
+  - trees
 ---
 
 Curabitur condimentum velit non orci facilisis pretium. Duis non auctor odio. Vivamus mollis, nunc eu tincidunt semper, tortor est blandit augue, non egestas augue dolor sit amet velit. Aliquam non ipsum eros. Integer id lorem eros. Vestibulum finibus sapien vitae neque tincidunt egestas. Aliquam feugiat risus ac risus blandit, id sollicitudin elit condimentum. Mauris ut felis sapien. Etiam in enim ac urna semper elementum.
