--- a/source/blog/2025/02/26.md
+++ b/source/blog/2025/02/26.md
@@ -1,6 +1,22 @@
 ---
 title: Suspendisse potenti
 date: 2025-02-26
+image:
+  alt: The long hallway in one of the wings of Eastern State Penitentiary, with decaying cells on either side
+  source: https://images.unsplash.com/photo-1632360384065-62b21f100ee6
+  credit: Edan Cohen
+  link: https://unsplash.com/photos/a-long-tunnel-with-a-metal-railing-leading-up-to-it-MOKze3c_iq4
+tags:
+  - building
+  - architecture
+  - bridge
+  - prison
+  - philadelphia
+  - indoors
+  - corridor
+  - ruins
+  - urban
+  - historic
 ---
 
 Cras convallis leo non leo pharetra sollicitudin. Donec orci nulla, commodo ac pulvinar eu, tincidunt a metus. Ut venenatis bibendum leo. Suspendisse consequat elementum est, id placerat mi faucibus accumsan. Suspendisse potenti. Nunc vehicula lorem vel felis sodales commodo. Vivamus commodo est sed risus ornare eleifend. Nam ullamcorper lectus dolor, in lacinia mauris efficitur ut. Nunc imperdiet tellus vitae ultrices auctor. Aenean efficitur ultrices lorem in eleifend. Sed at erat quam. Praesent tortor erat, aliquet non magna at, dictum viverra enim. Nullam at dictum magna.
