--- a/source/blog/2025/03/05.md
+++ b/source/blog/2025/03/05.md
@@ -1,6 +1,19 @@
 ---
 title: Curabitur ut suscipit eros
 date: 2025-03-05
+image:
+  alt: A skyline view of the US Custom House from Penn’s Landing in Philadelphia
+  source: https://images.unsplash.com/photo-1647796155764-18c1ffe18f5b
+  credit: Jimmy Woo
+  link: https://unsplash.com/photos/a-view-of-a-city-with-tall-buildings-rn60Tnf2zgo
+tags:
+  - building
+  - city
+  - architecture
+  - urban
+  - philadelphia
+  - downtown
+  - historic
 ---
 
 Ut nec nisl tempor, feugiat mauris nec, lobortis nisi. Cras non ipsum convallis, consectetur tortor a, elementum nisl. Donec non faucibus orci, nec molestie nibh. Vivamus id odio ac tortor imperdiet pretium. Quisque eu purus ipsum. Maecenas tristique congue felis sed feugiat. Sed interdum vitae nulla vel dapibus. Nunc et mauris purus. Suspendisse finibus dui et orci consectetur viverra. Donec sodales iaculis leo ac hendrerit. Pellentesque pretium nibh ac lectus suscipit scelerisque. Nulla in augue sit amet purus consectetur consequat. Cras tincidunt accumsan lectus, vel pellentesque odio imperdiet vel. Sed leo est, ornare posuere nisl id, varius rhoncus leo. Proin nec diam justo.
