--- a/source/blog/2025/03/12.md
+++ b/source/blog/2025/03/12.md
@@ -1,6 +1,19 @@
 ---
 title: Nam mollis in est ornare commodo
 date: 2025-03-12
+image:
+  alt: The Mascot for the Philadelphia Eagles, surrounded by fans carrying Eagles flags
+  source: https://images.unsplash.com/photo-1518401036563-9a1e29443c0f
+  credit: Casey Murphy
+  link: https://unsplash.com/photos/two-philadelphia-eagles-flags-zlSp94lcSFc
+tags:
+  - football
+  - sports
+  - philadelphia
+  - eagles
+  - parade
+  - mascot
+  - flags
 ---
 
 Sed congue mi non quam ullamcorper, vitae pharetra tellus fringilla. Praesent finibus egestas metus, ut posuere massa fermentum a. Suspendisse non posuere ligula. Fusce dignissim consequat libero ac lobortis. Sed vitae placerat risus. Vestibulum ac massa ornare, euismod nisl vel, aliquam nisi. Mauris tincidunt lorem lorem, ut condimentum massa efficitur non.
