--- a/source/blog/2025/03/19.md
+++ b/source/blog/2025/03/19.md
@@ -1,6 +1,22 @@
 ---
 title: Ut eleifend nisi eget justo pretium consequat
 date: 2025-03-19
+image:
+  alt: A view down Elfreth’s Alley in Old City Philadelphia, with historic rowhomes on either side of a cobblestone street
+  source: https://images.unsplash.com/photo-1704226858774-62df77f2a8f3
+  credit: Vinicius Brasil
+  link: https://unsplash.com/photos/a-narrow-street-lined-with-red-brick-buildings-wnBUOvKzFoo
+tags:
+  - city
+  - street
+  - urban
+  - path
+  - flags
+  - neighborhood
+  - philadelphia
+  - alley
+  - historic
+  - houses
 ---
 
 Donec felis turpis, mattis vel vulputate sed, blandit a justo. Donec orci nisl, laoreet ut orci ut, tempor convallis risus. Vivamus non est ornare, sodales neque id, ullamcorper arcu. Vivamus lobortis vehicula quam egestas varius. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec at auctor orci. Vestibulum fermentum est velit, at porta orci bibendum nec. Duis nec augue massa. Praesent sodales, est sed imperdiet lobortis, libero tortor varius justo, et aliquet arcu metus posuere orci. Mauris a est ut dolor scelerisque euismod. Maecenas mauris lorem, sodales eget elit aliquet, vehicula dignissim sapien. Praesent cursus aliquam mi, ut consectetur diam sagittis sed. Nullam id sagittis ipsum. Aenean porta sem aliquet, accumsan nibh vitae, pharetra felis.
