--- a/source/blog/2025/04/16.md
+++ b/source/blog/2025/04/16.md
@@ -1,6 +1,22 @@
 ---
 title: Quisque aliquam justo vitae maximus feugiat
 date: 2025-04-16
+image:
+  alt: The family court building next to the Free Library central branch at 19th and Vine
+  source: https://images.unsplash.com/photo-1662830942631-e7f664087979
+  credit: Praswin Prakashan
+  link: https://unsplash.com/photos/a-blue-car-driving-down-a-street-u-lD3L1jGbo
+tags:
+  - city
+  - architecture
+  - philadelphia
+  - car
+  - building
+  - urban
+  - vehicle
+  - transportation
+  - library
+  - court house
 ---
 
 Proin nec facilisis metus. Suspendisse sagittis ex augue, vel interdum mauris suscipit sit amet. Nulla ultrices libero eget justo lacinia viverra. Mauris fermentum lacus vitae eros fringilla efficitur. Vestibulum nisl elit, dictum vel nunc quis, efficitur egestas quam. Donec metus nulla, vehicula a turpis luctus, convallis lobortis enim. Cras malesuada augue eget felis luctus, id congue metus consequat. Phasellus id egestas libero.
