--- a/source/blog/2025/04/23.md
+++ b/source/blog/2025/04/23.md
@@ -1,6 +1,25 @@
 ---
 title: Fusce eleifend malesuada elit sit amet hendrerit
 date: 2025-04-23
+image:
+  alt: A view of University City and Center City in Philadelphia from the South Street Bridge over the Schuylkill River
+  source: https://images.unsplash.com/photo-1534102015696-3b5a58673b59
+  credit: Kelly Kiernan
+  link: https://unsplash.com/photos/time-lapse-photography-of-cars-on-road-N1czT1c1WCY
+tags:
+  - building
+  - city
+  - architecture
+  - night
+  - river
+  - buildings
+  - skyline
+  - street lights
+  - highway
+  - traffic
+  - philadelphia
+  - long exposure
+  - time lapse
 ---
 
 Suspendisse potenti. Ut vel iaculis mauris, imperdiet rhoncus urna. Integer mattis velit in consectetur faucibus. Nullam vitae nulla hendrerit, aliquet arcu accumsan, maximus enim. Pellentesque placerat ex id nisl vehicula venenatis. Aliquam bibendum finibus lectus, imperdiet ultrices tortor malesuada quis. Vivamus fermentum augue vel felis feugiat, et bibendum sem maximus.
