--- a/source/blog/2025/04/30.md
+++ b/source/blog/2025/04/30.md
@@ -1,6 +1,21 @@
 ---
 title: Suspendisse maximus odio non eros aliquam facilisis
 date: 2025-04-30
+image:
+  alt: Independence Hall in Old City Philadelphia
+  source: https://images.unsplash.com/photo-1644105740681-6bcb7335224b
+  credit: Jimmy Woo
+  link: https://unsplash.com/photos/a-large-building-with-a-clock-tower-in-the-middle-of-a-park-5rRzN_a0RzY
+tags:
+  - building
+  - city
+  - urban
+  - flag
+  - philadelphia
+  - architecture
+  - historic
+  - park
+  - clock tower
 ---
 
 Aliquam non sollicitudin turpis. Nulla facilisi. Phasellus faucibus erat libero, ac convallis lacus varius eu. Mauris eleifend elit sed mi sollicitudin, nec pharetra odio semper. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus condimentum viverra arcu, eu vulputate ipsum efficitur ac. Sed facilisis efficitur enim in consectetur. Fusce diam felis, dignissim quis ipsum in, convallis ultrices nisi. Etiam in ullamcorper lectus, eget dictum mi. Nulla neque leo, molestie at mauris id, interdum maximus ante.
