--- a/source/blog/2025/05/07.md
+++ b/source/blog/2025/05/07.md
@@ -1,6 +1,20 @@
 ---
 title: Maecenas quis magna metus
 date: 2025-05-07
+image:
+  alt: A neighborhood street in Philadelphia, lined with trees wrapped in string lights
+  source: https://images.unsplash.com/photo-1506636489208-f1d6c865744e
+  credit: Jacob Culp
+  link: https://unsplash.com/photos/man-standing-on-road-CoXCWbDqo8Y
+tags:
+  - houses
+  - autumn
+  - street
+  - trees
+  - leaves
+  - steps
+  - sidewalk
+  - building
 ---
 
 In ac nunc sapien. Nam nunc metus, egestas sed varius volutpat, convallis eget tellus. Sed molestie ipsum at ex vestibulum, nec facilisis erat pharetra. Praesent eget aliquam lorem. Suspendisse dapibus pellentesque dolor, eu blandit libero imperdiet et. Donec ac ante nec mi luctus laoreet nec eget tortor. Donec non vulputate ex, vel maximus justo.
