--- a/source/blog/2025/05/14.md
+++ b/source/blog/2025/05/14.md
@@ -1,6 +1,21 @@
 ---
 title: Vivamus pharetra mattis porta
 date: 2025-05-14
+image:
+  alt: The Franklin Fountain ice cream shop in Old City Philadelphia
+  source: https://images.unsplash.com/photo-1614946397830-7b1d02a93260
+  credit: Dan Mall
+  link: https://unsplash.com/photos/brown-and-white-concrete-building-during-daytime-wpEOaNHf8Sc
+tags:
+  - philadelphia
+  - food
+  - building
+  - city
+  - street
+  - urban
+  - restaurant
+  - neighborhood
+  - ice cream
 ---
 
 Duis dignissim, velit id vulputate tempor, lacus felis tristique nunc, quis faucibus erat felis nec nisl. In auctor arcu ac erat porttitor, dictum maximus orci tempus. Nam condimentum facilisis metus at egestas. Nullam egestas enim non auctor efficitur. Aliquam convallis posuere eros vel consectetur. Proin congue risus sed ligula pellentesque hendrerit. Mauris auctor ante ligula, vel eleifend sapien condimentum ut. Etiam vulputate, quam et sodales mollis, lorem felis tempor elit, eget consectetur odio nunc eget ex. Vestibulum elementum lacinia metus, et facilisis eros hendrerit eget. Suspendisse quis lorem vitae nisi feugiat molestie non sed diam.
