--- a/source/blog/2025/05/28.md
+++ b/source/blog/2025/05/28.md
@@ -1,6 +1,21 @@
 ---
 title: Ut at ullamcorper velit
 date: 2025-05-28
+image:
+  alt: The famous Philadelphia Love statue at Love Park, with the flag-lined Benjamin Franklin Parkway in the background
+  source: https://images.unsplash.com/photo-1618312776768-c5926372a2f5
+  credit: Salonagility.com Daniel
+  link: https://unsplash.com/photos/red-love-freestanding-letter-in-the-street-yElP7IU8ttg
+tags:
+  - love
+  - sculpture
+  - philadelphia
+  - building
+  - city
+  - light
+  - urban
+  - park
+  - historic
 ---
 
 Ut sodales, nibh ut vehicula dignissim, massa est feugiat eros, sed laoreet dui enim vitae ipsum. Suspendisse gravida eu dui quis venenatis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras semper elit at dapibus pellentesque. Etiam vel ornare mi, vitae interdum lectus. Donec condimentum, mi eget semper aliquam, massa mi ornare libero, ac pulvinar nibh ex ac sem. Nullam convallis, sem id pulvinar tincidunt, sem urna congue magna, sit amet dapibus velit augue vel nulla. Cras fringilla pellentesque lacus, eu condimentum odio lobortis et. In suscipit lacus vel scelerisque sollicitudin. Fusce non lacinia eros, molestie rhoncus elit. Sed tincidunt dictum commodo. Quisque eu semper velit. Etiam lobortis non libero sed scelerisque. Nullam augue lectus, pretium eu neque at, interdum ornare orci. In hac habitasse platea dictumst.
