--- a/source/blog/2025/06/04.md
+++ b/source/blog/2025/06/04.md
@@ -1,6 +1,22 @@
 ---
 title: Quisque convallis ex at felis sagittis ornare
 date: 2025-06-04
+image:
+  alt: View of the Benjamin Franklin Bridge in Philadelphia, looking up from Race Street Pier
+  source: https://images.unsplash.com/photo-1516508636691-2ea98becb2f5
+  credit: Devon Wellesley
+  link: https://unsplash.com/photos/maple-leaf-trees-near-bridge-during-daytime-wNOP8ccstJw
+tags:
+  - building
+  - city
+  - sunrise
+  - bridge
+  - philadelphia
+  - waterfront
+  - pier
+  - architecture
+  - trees
+  - historic
 ---
 
 Nullam feugiat neque vel blandit volutpat. Aliquam molestie, ipsum nec porta semper, metus neque pretium eros, ut feugiat nisl quam sed quam. Etiam aliquam rutrum tempor. Phasellus interdum lectus mauris, venenatis auctor mi interdum et. Nullam ut tristique enim, in tempor magna. Nam eget mi nulla. Donec aliquet gravida odio, ac vestibulum leo. Phasellus eleifend mauris vitae ante congue, sit amet iaculis nisl bibendum. Fusce nibh mauris, tincidunt id libero vel, feugiat convallis velit. Mauris bibendum luctus nunc, ut luctus erat ornare id. Ut cursus iaculis neque, non sodales sapien laoreet eget. Mauris congue cursus odio, a convallis justo elementum non. Etiam ornare euismod massa, non convallis nibh pulvinar eu. Nullam tempus magna a turpis mattis, at venenatis leo laoreet.
