--- a/source/blog/2025/06/11.md
+++ b/source/blog/2025/06/11.md
@@ -1,6 +1,24 @@
 ---
 title: Mauris pulvinar justo sapien
 date: 2025-06-11
+image:
+  alt: 20th and Rittenhouse in Philadelphia, with St. Patrick’s Church on the left and storefronts on the right
+  source: https://images.unsplash.com/photo-1508770218424-753a10cd8117
+  credit: Ethan Hoover
+  link: https://unsplash.com/photos/grey-and-orange-building-d7qtPAh9dhg
+tags:
+  - building
+  - city
+  - people
+  - architecture
+  - cars
+  - street
+  - trees
+  - church
+  - urban
+  - philadelphia
+  - produce
+  - pedestrians
 ---
 
 Nam vitae nisl sed tortor ultricies consectetur vel a risus. Donec diam quam, feugiat nec consequat non, convallis quis erat. Mauris id imperdiet felis. Integer at commodo velit. Curabitur id odio elit. Proin ornare eu metus vel molestie. Sed mollis mi vitae auctor commodo. Phasellus eu sapien elit. Integer vulputate volutpat elementum. Morbi a fringilla velit. Morbi malesuada efficitur iaculis.
