--- a/source/blog/2025/06/18.md
+++ b/source/blog/2025/06/18.md
@@ -1,6 +1,22 @@
 ---
 title: Nulla sodales orci eu turpis accumsan condimentum
 date: 2025-06-18
+image:
+  alt: The skyline of Philadelphia, as seen from the rooftop of a building with graffiti along the walls
+  source: https://images.unsplash.com/photo-1503411148546-b57247460b64
+  credit: Fredy Martinez
+  link: https://unsplash.com/photos/graffiti-on-walls-ou3fG2zWbcs
+tags:
+  - building
+  - city
+  - art
+  - sunset
+  - urban
+  - paint
+  - graffiti
+  - philadelphia
+  - rooftop
+  - skyline
 ---
 
 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce lacus turpis, suscipit at felis ut, volutpat pharetra nibh. Fusce nec leo efficitur, dapibus mauris in, volutpat metus. Fusce erat massa, vehicula id augue at, luctus ornare quam. Quisque tincidunt non urna vel suscipit. Suspendisse nisl eros, bibendum eget vulputate vitae, interdum et augue.
