--- a/source/blog/2025/06/25.md
+++ b/source/blog/2025/06/25.md
@@ -7,7 +7,7 @@ image:
   credit: Dan Mall
   link: https://unsplash.com/photos/unks-coffee-shop-signage-qf0wyIraUOI
 tags:
-  - history
+  - historic
   - philadelphia
   - food
   - building
