--- a/source/blog/2025/02/12.md
+++ b/source/blog/2025/02/12.md
@@ -1,6 +1,19 @@
 ---
 title: Aenean eget sodales enim, id congue augue
 date: 2025-02-12
+image:
+  alt: The back of a SEPTA bus, as seen from the street, with masked passangers through the large windows
+  source: https://images.unsplash.com/photo-1598022755511-ee18d05b17b1
+  credit: Brendon Smith
+  link: https://unsplash.com/photos/man-in-black-jacket-sitting-on-white-bus-29FvYGnBaog
+tags:
+  - bus
+  - transportation
+  - public transit
+  - philadelphia
+  - septa
+  - street
+  - street lights
 ---
 
 Nullam dapibus ornare mi et tempus. Proin sollicitudin facilisis diam et laoreet. Nulla mi dui, scelerisque sed porta non, ornare quis urna. Phasellus pulvinar, lorem convallis sodales gravida, mauris odio porttitor purus, quis venenatis neque mauris eu nisi. Morbi varius risus sapien, nec vestibulum turpis congue sed. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris at eros tincidunt, vestibulum risus quis, laoreet justo. Sed non velit semper, eleifend lorem at, sagittis arcu.
