clean up tags on sample blog posts

--- a/source/blog/2025/01/29.md
+++ b/source/blog/2025/01/29.md
@@ -17,7 +17,7 @@ tags:
   - sidewalk
   - diner
   - restaurant
-  - buildings
+  - building
 ---
 
 Proin sed consectetur mi, a molestie nisi. Proin ac auctor lorem. Morbi a placerat risus. Integer imperdiet libero arcu, nec fermentum enim volutpat non. Cras volutpat maximus ipsum, a commodo felis luctus eu. Nunc imperdiet mollis mi. Vestibulum urna risus, semper ut semper eu, ultricies lobortis arcu. Nullam consequat magna vitae tellus euismod laoreet. Sed quis fringilla nunc, eu gravida risus. In eget risus eu enim porta aliquam.
