--- a/source/blog/2025/03/26.md
+++ b/source/blog/2025/03/26.md
@@ -16,7 +16,7 @@ tags:
   - public transit
   - broad street line
   - septa
-  - station
+  - train station
 ---
 
 Phasellus a volutpat lacus, id placerat dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec sit amet orci nisl. Vivamus imperdiet risus at risus ullamcorper, eu semper nulla fermentum. Nam iaculis tortor nunc, quis scelerisque magna scelerisque id. Aliquam tristique mattis enim, eget tristique dui condimentum non. Curabitur in magna cursus, pellentesque eros ac, lacinia nisi. Nam elit augue, commodo nec dictum ac, tempor ut lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent lorem dolor, aliquam vehicula dignissim quis, dignissim ac nisi. Vestibulum eget orci quis velit tempus aliquet nec et magna.
