--- a/source/blog/2025/05/21.md
+++ b/source/blog/2025/05/21.md
@@ -11,8 +11,8 @@ tags:
   - philadelphia
   - long exposure
   - time lapse
-  - night view
-  - streetlights
+  - night
+  - street lights
   - city hall
   - clock tower
   - cars
