add category to posts, start styles for meta, lists

--- a/source/blog/2025/01/01.md
+++ b/source/blog/2025/01/01.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1705849442087-71b24cd4ca5b
   credit: Carol Highsmith’s America
   link: https://unsplash.com/photos/the-mummers-parade-pHrwFdLhYGI
+category: Vivamus
 tags:
   - street
   - parade
