--- a/source/blog/2025/01/08.md
+++ b/source/blog/2025/01/08.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1583038351909-978b5645d238
   credit: Savann Prak
   link: https://unsplash.com/photos/red-and-white-unks-building-DriyVDg9FME
+category: Mauris
 tags:
   - sign
   - landmark
