--- a/source/blog/2025/01/22.md
+++ b/source/blog/2025/01/22.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1693665509711-a4297521e7bb
   credit: Shawn Reid
   link: https://unsplash.com/photos/a-subway-train-pulling-into-a-train-station-jbVf_yZvdnQ
+category: Vivamus
 tags:
   - train
   - philadelphia
