--- a/source/blog/2025/01/29.md
+++ b/source/blog/2025/01/29.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1510510276178-f0d423c3913b
   credit: Jose Antonio Gallego Vázquez
   link: https://unsplash.com/photos/no-outlet-road-sign-beside-brown-concrete-buildings-IaXd2eUTwHA
+category: Mauris
 tags:
   - city
   - winter
