--- a/source/blog/2025/02/05.md
+++ b/source/blog/2025/02/05.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1643925263398-a2659b1ad981
   credit: Teitur Hansen
   link: https://unsplash.com/photos/a-fountain-with-a-statue-of-a-man-riding-a-turtle-JvCFSewPj7Q
+category: Elementum
 tags:
   - fountain
   - water
