--- a/source/blog/2025/02/12.md
+++ b/source/blog/2025/02/12.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1598022755511-ee18d05b17b1
   credit: Brendon Smith
   link: https://unsplash.com/photos/man-in-black-jacket-sitting-on-white-bus-29FvYGnBaog
+category: Vivamus
 tags:
   - bus
   - transportation
