--- a/source/blog/2025/02/19.md
+++ b/source/blog/2025/02/19.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1585446934544-1601af9ef0c4
   credit: Edan Cohen
   link: https://unsplash.com/photos/brown-wooden-bridge-in-the-woods-H-LTaIBsZBA
+category: Mauris
 tags:
   - wall
   - stairs
