--- a/source/blog/2025/02/26.md
+++ b/source/blog/2025/02/26.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1632360384065-62b21f100ee6
   credit: Edan Cohen
   link: https://unsplash.com/photos/a-long-tunnel-with-a-metal-railing-leading-up-to-it-MOKze3c_iq4
+category: Elementum
 tags:
   - building
   - architecture
