--- a/source/blog/2025/03/05.md
+++ b/source/blog/2025/03/05.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1647796155764-18c1ffe18f5b
   credit: Jimmy Woo
   link: https://unsplash.com/photos/a-view-of-a-city-with-tall-buildings-rn60Tnf2zgo
+category: Vivamus
 tags:
   - building
   - city
