--- a/source/blog/2025/03/12.md
+++ b/source/blog/2025/03/12.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1518401036563-9a1e29443c0f
   credit: Casey Murphy
   link: https://unsplash.com/photos/two-philadelphia-eagles-flags-zlSp94lcSFc
+category: Mauris
 tags:
   - football
   - sports
