--- a/source/blog/2025/03/19.md
+++ b/source/blog/2025/03/19.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1704226858774-62df77f2a8f3
   credit: Vinicius Brasil
   link: https://unsplash.com/photos/a-narrow-street-lined-with-red-brick-buildings-wnBUOvKzFoo
+category: Elementum
 tags:
   - city
   - street
