--- a/source/blog/2025/03/26.md
+++ b/source/blog/2025/03/26.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1595429824811-c2743897e9d4
   credit: Noah Cote
   link: https://unsplash.com/photos/gray-and-red-train-in-train-station-aJwW3KpuSLU
+category: Vivamus
 tags:
   - city
   - train
