--- a/source/blog/2025/04/02.md
+++ b/source/blog/2025/04/02.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1557445214-faa6b0244ae9
   credit: Ir Like
   link: https://unsplash.com/photos/black-philadelphia-building-ySHXPNHKlOU
+category: Mauris
 tags:
   - building
   - city
