--- a/source/blog/2025/04/09.md
+++ b/source/blog/2025/04/09.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1550102695-1b3acabaf08b
   credit: Dyana Wing So
   link: https://unsplash.com/photos/man-walking-near-brown-and-gray-concrete-building-during-daytime-ygCfAgkitvQ
+category: Elementum
 tags:
   - city
   - winter
