--- a/source/blog/2025/04/16.md
+++ b/source/blog/2025/04/16.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1662830942631-e7f664087979
   credit: Praswin Prakashan
   link: https://unsplash.com/photos/a-blue-car-driving-down-a-street-u-lD3L1jGbo
+category: Vivamus
 tags:
   - city
   - architecture
