--- a/source/blog/2025/04/23.md
+++ b/source/blog/2025/04/23.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1534102015696-3b5a58673b59
   credit: Kelly Kiernan
   link: https://unsplash.com/photos/time-lapse-photography-of-cars-on-road-N1czT1c1WCY
+category: Mauris
 tags:
   - building
   - city
