--- a/source/blog/2025/04/30.md
+++ b/source/blog/2025/04/30.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1644105740681-6bcb7335224b
   credit: Jimmy Woo
   link: https://unsplash.com/photos/a-large-building-with-a-clock-tower-in-the-middle-of-a-park-5rRzN_a0RzY
+category: Elementum
 tags:
   - building
   - city
