--- a/source/blog/2025/05/07.md
+++ b/source/blog/2025/05/07.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1506636489208-f1d6c865744e
   credit: Jacob Culp
   link: https://unsplash.com/photos/man-standing-on-road-CoXCWbDqo8Y
+category: Vivamus
 tags:
   - houses
   - autumn
