--- a/source/blog/2025/05/14.md
+++ b/source/blog/2025/05/14.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1614946397830-7b1d02a93260
   credit: Dan Mall
   link: https://unsplash.com/photos/brown-and-white-concrete-building-during-daytime-wpEOaNHf8Sc
+category: Mauris
 tags:
   - philadelphia
   - food
