--- a/source/blog/2025/05/21.md
+++ b/source/blog/2025/05/21.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1543372993-5fc1fc83caac
   credit: Heidi Kaden
   link: https://unsplash.com/photos/timelapse-photography-of-city-6LCen1qDcOw
+category: Elementum
 tags:
   - city
   - philadelphia
