--- a/source/blog/2025/05/28.md
+++ b/source/blog/2025/05/28.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1618312776768-c5926372a2f5
   credit: Salonagility.com Daniel
   link: https://unsplash.com/photos/red-love-freestanding-letter-in-the-street-yElP7IU8ttg
+category: Vivamus
 tags:
   - love
   - sculpture
