--- a/source/blog/2025/06/04.md
+++ b/source/blog/2025/06/04.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1516508636691-2ea98becb2f5
   credit: Devon Wellesley
   link: https://unsplash.com/photos/maple-leaf-trees-near-bridge-during-daytime-wNOP8ccstJw
+category: Mauris
 tags:
   - building
   - city
