--- a/source/blog/2025/06/11.md
+++ b/source/blog/2025/06/11.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1508770218424-753a10cd8117
   credit: Ethan Hoover
   link: https://unsplash.com/photos/grey-and-orange-building-d7qtPAh9dhg
+category: Elementum
 tags:
   - building
   - city
