--- a/source/blog/2025/06/18.md
+++ b/source/blog/2025/06/18.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1503411148546-b57247460b64
   credit: Fredy Martinez
   link: https://unsplash.com/photos/graffiti-on-walls-ou3fG2zWbcs
+category: Vivamus
 tags:
   - building
   - city
