--- a/source/blog/2025/01/15.md
+++ b/source/blog/2025/01/15.md
@@ -6,6 +6,7 @@ image:
   source: https://images.unsplash.com/photo-1525916714929-286f823b1944
   credit: Tim Mccarthy
   link: https://unsplash.com/photos/brown-wooden-stairs--kMm970EVqw
+category: Elementum
 tags:
   - museum
   - stairs
